@@ -14,6 +14,7 @@ Release 0.20.1 - Unreleased
                access to the raw binary to prevent forced deserialization
    HBASE-1687  bin/hbase script doesn't allow for different memory settings for
                each daemon type
+   HBASE-1823  Ability for Scanners to bypass the block cache
 
 Release 0.20.0 - Tue Sep  8 12:48:41 PDT 2009
 
